// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  
  <input
    error=""
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  <label
    className="Label-inke2y-0 gpnWva"
    htmlFor="range-with-label"
  >
     
    Text label
     
  </label>
  <input
    error=""
    id="range-with-label"
    label="Text label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  
  <input
    error="Error message"
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  <div
    className="ErrorMessage-o8xm0w-0 cMosjL"
  >
    Error message
  </div>
</div>
`;
